<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="locale"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <android.support.v7.widget.Toolbar
        app:theme="@style/Theme.AppCompat.Light.NoActionBar"
        android:layoutDirection="locale"

        android:id="@+id/toolbar_top"
        android:layout_height="90dp"
        android:layout_width="match_parent"
        android:background="@drawable/gradient"
        xmlns:android="http://schemas.android.com/apk/res/android">

        <ImageView

            android:layoutDirection="locale"
            android:background="@drawable/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:id="@+id/toolbar_back" />

        <TextView

            android:layoutDirection="locale"

            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toolbar_title"
            android:layout_gravity="start|top"
            android:id="@+id/toolbar_title" />


    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.CardView
        android:layoutDirection="locale"
        android:layout_marginBottom="15dp"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardElevation="4dp"
        app:cardCornerRadius="6dp"
        app:cardMaxElevation="4dp"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:background="@color/colorWhite"
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
<android.support.constraint.ConstraintLayout
    android:background="@color/colorWhite"
    android:layout_width="match_parent"
    android:layout_height="60dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/filter" />

    <TextView
        android:textStyle="bold"
        android:textSize="17sp"
        android:textColor="@color/colorBlack"
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/filter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.009"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="210dp"
        android:background="@color/colorGray"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.072"
        app:layout_constraintStart_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sort" />

    <TextView
        android:textSize="17sp"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/sort"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.039"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52" />

    <LinearLayout

        android:id="@+id/linearLayout2"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="113dp"
        android:background="@color/colorGray"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"></LinearLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.134"
        app:layout_constraintStart_toEndOf="@+id/linearLayout2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/grid" />

    <TextView
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:textSize="15sp"
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/grid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>


</RelativeLayout>