<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <android.support.v7.widget.CardView
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardCornerRadius="6dp"
        app:cardElevation="4dp"
        app:cardMaxElevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044">

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:scaleType="fitCenter"
        android:id="@+id/imageView4_car"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        />


    <TextView
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:id="@+id/textView5_make"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="155dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.069" />

    <TextView
        android:textColor="@color/colorGreen"
        android:textStyle="bold"
        android:textSize="15sp"
        android:id="@+id/textView6_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="100000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView4_car"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:textColor="@color/colorGreen"
        android:id="@+id/textView7_currency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10dp"
        android:text="AED"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.032"
        app:layout_constraintStart_toEndOf="@+id/textView6_price"
        app:layout_constraintTop_toBottomOf="@+id/textView5_make"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:textColor="@color/colorGray"
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/lot"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toEndOf="@+id/imageView4_car"
        app:layout_constraintTop_toBottomOf="@+id/textView6_price"
        app:layout_constraintVertical_bias="0.195" />

    <TextView

        android:textSize="12sp"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:id="@+id/textView9_lot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="8dp"
        android:text="333673"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView5_make"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toEndOf="@+id/imageView4_car"
        app:layout_constraintTop_toTopOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.68" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="1dp"
        android:layout_height="30dp"
        android:layout_marginBottom="14dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="20dp"
        android:background="@color/colorGray"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.614"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.923" />

    <TextView
        android:textColor="@color/colorGray"

        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/bids"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView5_make"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toEndOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/textView5_make"
        app:layout_constraintVertical_bias="0.571" />

    <TextView
        android:textSize="12sp"
        android:id="@+id/textView11_bids"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="82dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10dp"
        android:text="36736"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="@+id/textView5_make"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/linearLayout3"
        app:layout_constraintTop_toTopOf="@+id/textView10"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:layout_marginBottom="8dp"
        android:layout_width="1dp"
        android:layout_height="30dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorGray"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.765"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.854"></LinearLayout>

    <TextView
        android:textColor="@color/colorGray"

        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:text="@string/time_left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.938"
        app:layout_constraintStart_toEndOf="@+id/imageView4_car"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.713" />

    <TextView


        android:textSize="12sp"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:id="@+id/textView13_time_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="00:00:00"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.938"
        app:layout_constraintStart_toEndOf="@+id/imageView4_car"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.93" />


</android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>